k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-demo-app
  namespace: app-demo
  labels:
    app: eks-demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-demo-app
  template:
    metadata:
      labels:
        app: eks-demo-app
    spec:
      containers:
        - name: eks-demo-app
          image: 508703379734.dkr.ecr.us-east-1.amazonaws.com/eks-demo-app-senior:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 20
