k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-demo-service
  namespace: app-demo
spec:
  type: ClusterIP
  selector:
    app: eks-demo-app
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
